Fix: Delete console logs from js code, API requests with unselected date and base, background error when table got too long

--- a/backup_service/web/backups/static/css/backup.css
+++ b/backup_service/web/backups/static/css/backup.css
@@ -7,7 +7,7 @@
     margin: 0 auto;
     padding: 50px 0;
     width: 90%;
-    background: linear-gradient(252.65deg, #9811C7 -12.01%, #799BF3 100%) no-repeat;
+    background: linear-gradient(252.65deg, #9811C7 -12.01%, #799BF3 100%) no-repeat fixed;
 }
 
 .backup-header {
